[metadata]
name = wildebeest
version = 0.0.1

[options]
packages = find:
install_requires =
    argcomplete
    ipython
    pandas
    psutil
    pyyaml
    termcolor

[options.entry_points]
console_scripts =
    test_driver = wildebeest.scripts.test_driver:main
    wdb = wildebeest.scripts.cmdline:main
wildebeest.build_system_drivers =
    cmake = wildebeest.buildsystemdrivers.cmakedriver:CmakeDriver
wildebeest.recipes =
    test = wildebeest.recipes.test:recipe_list
    games = wildebeest.recipes.games:game_list
    docker_test_list = wildebeest.recipes.games:docker_test_list
wildebeest.project_lists =
    test = wildebeest.projectlists.test:test_list
    c_projects = wildebeest.projectlists.bylanguage:c_projects
    c_only_projects = wildebeest.projectlists.bylanguage:c_only_projects
wildebeest.experiments =
    docker_test = experiments.docker_test:DockerTest
