[metadata]
name = wildebeest
version = 0.0.1

[options]
packages = find:
install_requires =
    argcomplete
    ipython
    pandas
    psutil
    pyyaml
    termcolor

[options.entry_points]
console_scripts =
    test_driver = wildebeest.scripts.test_driver:main
    wdb = wildebeest.scripts.cmdline:main
wildebeest.build_system_drivers =
    cmake = wildebeest.buildsystemdrivers.cmakedriver:CmakeDriver
    make = wildebeest.buildsystemdrivers.makedriver:MakeDriver
wildebeest.recipes =
    c_games = wildebeest.recipes.games:c_game_recipes
    dsp = wildebeest.recipes.dsp:dsp_recipes
    test = wildebeest.recipes.test:recipe_list
    benchmarks = wildebeest.recipes.benchmarks:benchmark_recipes
wildebeest.project_lists =
    c_games = wildebeest.recipes.games:c_game_list
    c_projects = wildebeest.projectlists.bylanguage:c_projects
    c_only_projects = wildebeest.projectlists.bylanguage:c_only_projects
    dsp = wildebeest.recipes.dsp:dsp_list
    test = wildebeest.projectlists.test:test_list
    coreutils = wildebeest.recipes.benchmarks:coreutils_list
wildebeest.experiments =
    docker_test = wildebeest.experiments.docker_test:DockerTest
